adapter belom jadi

--- a/app/src/main/res/layout/fragment_promo.xml
+++ b/app/src/main/res/layout/fragment_promo.xml
@@ -9,10 +9,16 @@
         android:src="@drawable/biru"
         />
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Belum Ada Promo."/>
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:gravity="center"-->
+        <!--android:text="Belum Ada Promo."/>-->
 
 </RelativeLayout>
